// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button/> should render 1`] = `
<button
  className="btn undefined"
  type="button"
>
  LABEL
</button>
`;

exports[`<Button/> should render the button with type "submit" 1`] = `
<button
  className="btn undefined"
  type="submit"
/>
`;
